[project]
name = "incident_commander"
version = "1.0.0"
description = "DevOps SRE incident response OpenEnv environment"
authors = [
    { name = "IncidentCommander Team", email = "team@example.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.1",
    "openai>=1.30.1",
    "huggingface-hub>=0.23.0",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "gradio>=4.31.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
