[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident_commander"
version = "1.0.0"
description = "IncidentCommander — DevOps SRE incident response environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.2",
    # Inference script dependencies
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.32.3",
    # Dashboard dependencies
    "gradio>=4.31.5",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point — enables running via: uv run --project . server
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
